Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19604

WolfSSL breaks binlog_encryption.binlog_incident

    XMLWordPrintable

Details

    Description

      All 3 variants of the test binlog_encryption.binlog_incident will fail if WITH_SSL=bundled is being used. This test did not fail with the previous built-in SSL library (YaSSL). The bundled library was changed in MDEV-18531.

      I have repeated this with GCC 8.3.0, Clang 7.0.1 and Clang 8.0.0.

      10.4 e32212c63c9675591e9c4b15c1bce9f61ec02eb8

      CURRENT_TEST: binlog_encryption.binlog_incident
      mysqltest: In included file "./suite/binlog/include/binlog_incident.inc": 
      included from /mariadb/10.4/mysql-test/suite/binlog_encryption/binlog_incident.test at line 3:
      At line 41: query 'REPLACE INTO t1 VALUES (4)' failed: 1026: Error writing file 'master-bin' (errno: 11 "Resource temporarily unavailable")
      

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3h
                  3h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.